# apps/api/src/features/health/health.controller.ts
@@ -1,6 +1,6 @@
 import { Controller, Get } from '@nestjs/common';
-import { ConfigService } from '@nestjs/config';
 import { ApiOperation, ApiResponse, ApiTags } from '@nestjs/swagger';
+import { API_HEADER_RATE_LIMIT } from '../swagger';
 
 @ApiTags('health')
 @Controller({
@@ -8,8 +8,6 @@ import { ApiOperation, ApiResponse, ApiTags } from '@nestjs/swagger';
   path: 'status',
 })
 export class HealthController {
-  constructor(private readonly configService: ConfigService) {}
-
   @Get()
   @ApiOperation({
     summary: 'Health check endpoint',
@@ -18,6 +16,7 @@ export class HealthController {
   @ApiResponse({
     status: 200,
     description: 'Service is healthy',
+    headers: { ...API_HEADER_RATE_LIMIT },
     content: {
       'application/problem+json': {
         schema: {
@@ -26,17 +25,6 @@ export class HealthController {
         example: {
           status: 200,
           title: 'OK',
-        },
-      },
-    },
-  })
-  @ApiResponse({
-    status: 'default',
-    description: 'Client or server error during semantic score calculation.',
-    content: {
-      'application/problem+json': {
-        schema: {
-          $ref: '#/components/schemas/Problem',
         },
       },
     },
